Fix overflow on mobile landscape view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,9 +4,11 @@
 
 /* Colours */
 
+
+
 /* Text */
 
-.contrast-heading {
+.contrast-header {
     font-family: "Lato", sans-serif;
     font-weight: 300;
     color: #fafaff;
@@ -57,26 +59,35 @@
 /* Callout */
 
 .callout-background {
-    height: 85vh;
+    height: 100vh;
     background: url(../images/IMG_1217.JPG) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
 }
 
 .callout-bg-overlay {
     position: absolute;
     top: 0;
     left: 0;
-    height: 85vh;
+    height: 100vh;
     width: 100%;
     background-color: rgba(41, 44, 121, 0.7);
 }
 
+
 .jumbotron {
-    margin-top: 120px;
+    margin-top: 25vh;
     background: transparent;
+}
+
+.invisible {
+    border: none;
 }
 
 /* Forms */
@@ -93,3 +104,11 @@ form {
     color: #202020;
 }
 
+/* Media queries */
+
+@media only screen and (max-height: 414px) {
+  
+  .jumbotron p {
+    display: none;
+  }
+}
